--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <!--   google console -->
+  <meta name="google-site-verification" content="pMGx529LbVn5DhI5Pscq65_Kfu-i6YiDLyiejKmMgY4" />
   <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
   <title>Happy Birthday! Nithin! </title>
   <!-- Google Font -->
